--- a/A-InventarioFondoedit/src/app/components/publicaciones-module/navbar-publicaciones/navbar-publicaciones.component.html
+++ b/A-InventarioFondoedit/src/app/components/publicaciones-module/navbar-publicaciones/navbar-publicaciones.component.html
@@ -5,7 +5,7 @@
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
 
       <div class="navbar-nav">
-        <a class="nav-item nav-link" routerLink="publicaciones">Lista de publicaciones disponibles</a>
+        <a class="nav-item nav-link" routerLink="publicaciones">Publicaciones disponibles</a>
         <a class="nav-item nav-link ml-5" routerLink="stocks">Entradas</a>
         <a class="nav-item nav-link ml-5" routerLink="salidas">Salidas</a>
         <a class="nav-item nav-link ml-5" routerLink="ventas">Ventas</a>
