--- a/A-InventarioFondoedit/src/app/components/publicaciones-module/stocks/stocks-list/stocks-list.component.html
+++ b/A-InventarioFondoedit/src/app/components/publicaciones-module/stocks/stocks-list/stocks-list.component.html
@@ -1,4 +1,4 @@
-<h3 class="mt-5">Lista de entradas de publicaciones</h3>
+<h3 class="mt-5">Administrador de entradas</h3>
 <hr>
 
 <div class="card mt-5">
