new commit ready

--- a/A-InventarioFondoedit/src/app/components/publicaciones-module/publicaciones/publicaciones-form/publicaciones-form.component.html
+++ b/A-InventarioFondoedit/src/app/components/publicaciones-module/publicaciones/publicaciones-form/publicaciones-form.component.html
@@ -56,7 +56,7 @@
 
       <div class="col-3">
         <div class="form-group">
-          <label for="isbn">ISBN</label>
+          <label for="isbn">ISBN/ISSN</label>
           <input required [(ngModel)]="publicacion.isbn" type="text" name="isbn" #name="ngModel" id="isbn" placeholder="Inserte el isbn"
             class="form-control">
         </div>
@@ -64,7 +64,7 @@
 
       <div class="col-3">
         <div class="form-group">
-          <label for="codigo">Codigo</label>
+          <label for="codigo">Deposito Legal</label>
           <input required [(ngModel)]="publicacion.codigo" type="text" name="codigo" #name="ngModel" id="codigo"
             placeholder="Inserte el codigo" class="form-control">
         </div>
