materiales manual Listo

--- a/A-InventarioFondoedit/src/app/components/materiales-module/Entregas/entregas-form/entregas-form.component.html
+++ b/A-InventarioFondoedit/src/app/components/materiales-module/Entregas/entregas-form/entregas-form.component.html
@@ -70,7 +70,7 @@
 
     <div class="form-group text-center">
       <button type="submit" class="btn btn-primary" style="padding:8px 100px;margin-top:25px;" [disabled]="!entregaForm.valid">
-        Guardar Complemento
+        Guardar entrega
       </button>
     </div>
 
