--- a/A-InventarioFondoedit/src/app/components/navbar/navbar.component.html
+++ b/A-InventarioFondoedit/src/app/components/navbar/navbar.component.html
@@ -17,7 +17,7 @@
         </li>
 
         <li class="nav-item">
-            <a class="nav-item nav-link" routerLink="login" *ngIf="!loggedIn">Login</a>
+            <a class="nav-item nav-link" routerLink="login" *ngIf="!loggedIn">Iniciar Sesión</a>
             <a class="nav-item nav-link" href="#" (click)="logout($event)" *ngIf="loggedIn">Cerrar Sesión</a>
         </li>
         
