--- a/A-InventarioFondoedit/src/app/components/login/login.component.html
+++ b/A-InventarioFondoedit/src/app/components/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="container mt-4">
+<div class="container" style="margin-top:10%">
     
   <div class="row justify-content-center">
     <div class="col-md-8">
@@ -6,7 +6,7 @@
       <div class="card">
   
         <div class="card-header">
-          <div class="h3">Login</div>
+          <div class="h3">Iniciar Sesión</div>
         </div>
   
         <div class="card-body">
@@ -17,28 +17,28 @@
             </div>
 
             <div class="form-group">
-              <label for="exampleInputEmail1">Email address</label>
-              <input type="email" name="email" class="form-control" id="exampleInputEmail1" placeholder="Enter email" [(ngModel)]="form.email" required>
+              <label for="exampleInputEmail1">Email</label>
+              <input type="email" name="email" class="form-control" id="exampleInputEmail1" placeholder="Ingresa email" [(ngModel)]="form.email" required>
 
-              <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+              <small id="emailHelp" class="form-text text-muted">No compartiremos tu Email.</small>
             </div>
 
             <div class="form-group">
-              <label for="exampleInputPassword1">Password</label>
-              <input type="password" name="password" class="form-control" id="exampleInputPassword1" placeholder="Password" [(ngModel)]="form.password" required>
+              <label for="exampleInputPassword1">Contraseña</label>
+              <input type="password" name="password" class="form-control" id="exampleInputPassword1" placeholder="Contraseña" [(ngModel)]="form.password" required>
             </div>
 
             <div class="form-group">
-              <button type="submit" class="btn btn-primary" [disabled]="!loginForm.valid">Sign in</button>
+              <button type="submit" class="btn btn-primary" [disabled]="!loginForm.valid">Iniciar Sesión</button>
 
-              <a routerLink="/signup" class="btn btn-info float-right" >Sign Up</a> 
+              <a routerLink="/signup" class="btn btn-info float-right">Registrarse</a> 
             </div>
 
             <small class="float-right">
-              <a routerLink="/request-pass-reset">Reset Password</a>
+              <a routerLink="/request-pass-reset">Recuperar contraseña</a>
             </small>
 
-            </form>
+          </form>
 
             
         </div>
