--- a/A-InventarioFondoedit/src/app/components/materiales-module/Entradas/entradas-form/entradas-form.component.html
+++ b/A-InventarioFondoedit/src/app/components/materiales-module/Entradas/entradas-form/entradas-form.component.html
@@ -39,7 +39,7 @@
 
     <div class="form-group text-center">
       <button type="submit" class="btn btn-primary" style="padding:8px 100px;margin-top:25px;" [disabled]="!entradaForm.valid">
-        Guardar Complemento
+        Guardar entrada
       </button>
     </div>
 
