--- a/A-InventarioFondoedit/src/app/components/sign-up/sign-up.component.html
+++ b/A-InventarioFondoedit/src/app/components/sign-up/sign-up.component.html
@@ -1,4 +1,4 @@
-<div class="container mt-4">
+<div class="container" style="margin-top:10%">
     
     <div class="row justify-content-center">
       <div class="col-md-8">
@@ -6,7 +6,7 @@
         <div class="card">
     
           <div class="card-header">
-            <div class="h3">Sign Up</div>
+            <div class="h3">Registrarse</div>
           </div>
     
           <div class="card-body">
@@ -14,35 +14,35 @@
 
               <div class="form-group">
                 
-                <label for="exampleInputName">Name</label>
-                <input type="text" name="name" class="form-control" id="exampleInputName" placeholder="Enter name" [(ngModel)]="form.name" required>
+                <label for="exampleInputName">Nombre</label>
+                <input type="text" name="name" class="form-control" id="exampleInputName" placeholder="Ingresar nombre" [(ngModel)]="form.name" required>
 
               </div>
 
               <div class="form-group">
-                <label for="exampleInputEmail1">Email address</label>
-                <input type="email" name="email" class="form-control" id="exampleInputEmail1" placeholder="Enter email" [(ngModel)]="form.email" required>
+                <label for="exampleInputEmail1">Email</label>
+                <input type="email" name="email" class="form-control" id="exampleInputEmail1" placeholder="Email" [(ngModel)]="form.email" required>
                 <div class="alert alert-danger" [hidden]="!error.email">
                     {{error.email}}
                 </div>
               </div>
   
               <div class="form-group">
-                <label for="exampleInputPassword1">Password</label>
-                <input type="password" name="password" class="form-control" id="exampleInputPassword1" placeholder="Password" [(ngModel)]="form.password" required>
+                <label for="exampleInputPassword1">Contraseña</label>
+                <input type="password" name="password" class="form-control" id="exampleInputPassword1" placeholder="Contraseña" [(ngModel)]="form.password" required>
               </div>
 
               <div class="form-group">
-                <label for="exampleInputPasswordConfirm">Confirm Password</label>
-                <input type="password" name="passwordConfirmation" class="form-control" id="exampleInputPasswordConfirm" placeholder="Confirm Password" [(ngModel)]="form.password_confirmation" required>
+                <label for="exampleInputPasswordConfirm">Confirmar Contraseña</label>
+                <input type="password" name="passwordConfirmation" class="form-control" id="exampleInputPasswordConfirm" placeholder="Confirmar Contraseña" [(ngModel)]="form.password_confirmation" required>
                 <div class="alert alert-danger" [hidden]="!error.password_confirmation">
                     {{error.password}}
                 </div>
               </div>
   
-              <button type="submit" class="btn btn-primary" [disabled]="!signupForm.valid">Sign Up</button>
+              <button type="submit" class="btn btn-primary" [disabled]="!signupForm.valid">Registrarse</button>
   
-              <a routerLink="/login" class="btn btn-info float-right" >Sign In</a>
+              <a routerLink="/login" class="btn btn-info float-right">Iniciar Sesión</a>
   
               </form>
           </div>
