--- a/A-InventarioFondoedit/src/app/components/publicaciones-module/publicaciones/publicaciones-form/publicaciones-form.component.html
+++ b/A-InventarioFondoedit/src/app/components/publicaciones-module/publicaciones/publicaciones-form/publicaciones-form.component.html
@@ -64,9 +64,9 @@
 
       <div class="col-3">
         <div class="form-group">
-          <label for="codigo">Deposito Legal</label>
+          <label for="codigo">Depósito Legal</label>
           <input required [(ngModel)]="publicacion.codigo" type="text" name="codigo" #name="ngModel" id="codigo"
-            placeholder="Inserte el codigo" class="form-control">
+            placeholder="Inserte el depósito Legal" class="form-control">
         </div>
       </div>
 
