--- a/A-InventarioFondoedit/src/app/components/publicaciones-module/publicaciones/publicaciones-list/publicaciones-list.component.html
+++ b/A-InventarioFondoedit/src/app/components/publicaciones-module/publicaciones/publicaciones-list/publicaciones-list.component.html
@@ -6,7 +6,7 @@
   <div class="card-header">
     <div class="row">
       <div class="col-2">
-        <p class="ml-3 m-0">Código</p>
+        <p class="ml-3 m-0">ISBN</p>
       </div>
 
       <div class="col-4">
@@ -40,7 +40,7 @@
       | paginate: { itemsPerPage: 5, currentPage: p, id: 'first'}">
         <div class="row">
           <div class="col-2">
-            <p>{{publicacion.codigo}}</p>
+            <p>{{publicacion.isbn}}</p>
           </div>
 
           <div class="col-4">
