--- a/A-InventarioFondoedit/src/app/components/publicaciones-module/stocks/stocks-form/stocks-form.component.html
+++ b/A-InventarioFondoedit/src/app/components/publicaciones-module/stocks/stocks-form/stocks-form.component.html
@@ -1,5 +1,5 @@
-<h2 mat-dialog-title class="text-center" *ngIf="!loading">Nuevo stock</h2>
-<h2 mat-dialog-title class="text-center" *ngIf="loading">Añadiendo stock</h2>
+<h2 mat-dialog-title class="text-center" *ngIf="!loading">Nueva entrada</h2>
+<h2 mat-dialog-title class="text-center" *ngIf="loading">Añadiendo entrada</h2>
 
 <hr class="mt-2 mb-0">
 
@@ -66,7 +66,7 @@
 
     <div class="form-group text-center">
       <button type="submit" class="btn btn-primary" style="padding:8px 100px;margin-top:25px;" [disabled]="!stockForm.valid">
-        Guardar Complemento
+        Guardar entrada
       </button>
     </div>
 
