--- a/A-InventarioFondoedit/src/app/components/publicaciones-module/ventas/ventas-list/ventas-list.component.html
+++ b/A-InventarioFondoedit/src/app/components/publicaciones-module/ventas/ventas-list/ventas-list.component.html
@@ -45,6 +45,10 @@
           <div class="col-2">
             <p class="m-0">{{venta.monto_credito}}</p>
           </div>
+          
+          <div class="col-2">
+            <p class="m-0">{{venta.created_at}}</p>
+          </div>
 
           <div class="col">
             <a class="float-right ml-4 text-danger" (click)="deleteventa(venta.id)" 
