--- a/A-InventarioFondoedit/src/app/components/publicaciones-module/publicaciones/publicaciones-view/publicaciones-view.component.html
+++ b/A-InventarioFondoedit/src/app/components/publicaciones-module/publicaciones/publicaciones-view/publicaciones-view.component.html
@@ -30,7 +30,9 @@
       <strong>Descripción: </strong>
       <p>{{data.descripcion}}</p>
     </div>
+  </div>
 
+  <div class="row">
     <div class="col">
       <strong>Tipo de publicación:</strong>
       <p>{{data.tipo_publicacion}}</p>
@@ -45,7 +47,6 @@
       <strong>Origen: </strong>
       <p>{{data.origen}}</p>
     </div>
-
   </div>
 
   <div class="row">
