--- a/A-InventarioFondoedit/src/app/components/password/response-reset/response-reset.component.html
+++ b/A-InventarioFondoedit/src/app/components/password/response-reset/response-reset.component.html
@@ -6,35 +6,35 @@
       <div class="card">
   
         <div class="card-header">
-          <div class="h3">Change Password</div>
+          <div class="h3">Cambiar Contraseña</div>
         </div>
   
         <div class="card-body">
           <form #resetPassForm=ngForm (ngSubmit)="onSubmit()" >
 
             <div class="form-group">
-              <label for="exampleInputEmail1">Email address</label>
+              <label for="exampleInputEmail1">Email</label>
               <input type="email" name="email" class="form-control" id="exampleInputEmail1" placeholder="Enter email" [(ngModel)]="form.email" required>
               <div class="alert alert-danger" [hidden]="!error.email"> {{error.email}}</div>
             </div>
 
             <div class="form-group">
-              <label for="exampleInputPassword1">Password</label>
+              <label for="exampleInputPassword1">Contraseña</label>
               <input type="password" name="password" class="form-control" id="exampleInputPassword1" placeholder="Password" [(ngModel)]="form.password" required>
               <div class="alert alert-danger" [hidden]="!error.password"> {{error.password}}</div>
             </div>
 
             <div class="form-group">
-              <label for="exampleInputPasswordConfirm">Confirm Password</label>
+              <label for="exampleInputPasswordConfirm">Confirmar Contraseña</label>
               <input type="password" name="passwordConfirmation" class="form-control" id="exampleInputPasswordConfirm" placeholder="Confirm Password" [(ngModel)]="form.password_confirmation" required>
               <div class="alert alert-danger" [hidden]="!error.password_confirmation"> {{error.password}}</div>
             </div>
 
             <div class="form-group">
-              <button type="submit" class="btn btn-primary" [disabled]="!resetPassForm.valid">Change password</button> 
+              <button type="submit" class="btn btn-primary" [disabled]="!resetPassForm.valid">Cambiar contraseña</button> 
             </div>
 
-            </form>
+          </form>
 
             
         </div>
