--- a/A-InventarioFondoedit/src/app/components/publicaciones-module/salidas/salidas-form/salidas-form.component.html
+++ b/A-InventarioFondoedit/src/app/components/publicaciones-module/salidas/salidas-form/salidas-form.component.html
@@ -81,13 +81,13 @@
           </div>
 
           <div class="col-2">
-            <p class="m-0">ID</p>
+            <p class="m-0">título</p>
           </div>
 
         </div>
 
         <ul class="list-group list-group-flush">
-          <li class="list-group-item" *ngFor="let pub of publicaciones">
+          <li class="list-group-item" *ngFor="let pub of publicaciones; index as i">
             <div class="row">
               <div class="col-2">
                 <p>{{pub.cantidad}}</p>
@@ -96,10 +96,11 @@
               <div class="col-2">
                 <p class="m-0">{{pub.tipo_cantidad}}</p>
               </div>
-
+              
               <div class="col-2">
-                <p class="m-0">{{pub.publicacion_id}}</p>
+                <p class="m-0">{{titulos[i]}}</p>
               </div>
+              
             </div>
           </li>
         </ul>
@@ -165,7 +166,8 @@
     </div>
 
     <div class="form-group text-center">
-      <button type="submit" class="btn btn-primary" style="padding:8px 100px;margin-top:25px;" [disabled]="!salidaForm.valid">
+      <button type="submit" class="btn btn-primary" style="padding:8px 100px;margin-top:25px;" 
+      [disabled]="!salidaForm.valid || publicaciones.length == 0">
         Guardar salida
       </button>
     </div>
