--- a/A-InventarioFondoedit/src/app/components/publicaciones-module/publicaciones/publicaciones-form/publicaciones-form.component.html
+++ b/A-InventarioFondoedit/src/app/components/publicaciones-module/publicaciones/publicaciones-form/publicaciones-form.component.html
@@ -1,4 +1,4 @@
-<h3 class="mt-5">Añadir nueva publicacion</h3>
+<h3 class="mt-5">Añadir nueva publicación</h3>
 <hr>
 
 <form #publicacionForm="ngForm" (ngSubmit)="onSubmit(publicacionForm)">
