--- a/A-InventarioFondoedit/src/app/components/publicaciones-module/navbar-publicaciones/navbar-publicaciones.component.html
+++ b/A-InventarioFondoedit/src/app/components/publicaciones-module/navbar-publicaciones/navbar-publicaciones.component.html
@@ -9,6 +9,8 @@
         <a class="nav-item nav-link ml-5" routerLink="stocks">Entradas</a>
         <a class="nav-item nav-link ml-5" routerLink="salidas">Salidas</a>
         <a class="nav-item nav-link ml-5" routerLink="ventas">Ventas</a>
+        <a class="nav-item nav-link ml-5" style="cursor:pointer;" 
+        (click)="openReporte()">Reportes</a>
       </div>
 
     </div>
