--- a/A-InventarioFondoedit/src/app/components/publicaciones-module/publicaciones/publicaciones-view/publicaciones-view.component.html
+++ b/A-InventarioFondoedit/src/app/components/publicaciones-module/publicaciones/publicaciones-view/publicaciones-view.component.html
@@ -2,7 +2,8 @@
 
 <mat-dialog-content>
 
-  <h5>Informacion</h5>
+  <hr>
+  <h5>Información</h5>
   <hr>
   <div class="row mt-4">
 
@@ -75,6 +76,7 @@
 
   </div>
 
+  <hr>
   <h5>Disponibilidad</h5>
   <hr>
 
